[package]
name = "charcoal_16"
version = "0.1.0"
authors = ["abledbody <drewisakid@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true

[dependencies]
ggez = "0.5.1"
asm_19 = {path = "../ASM-19"}
mint = "0.5.4"