[package]
name = "charcoal_16"
version = "0.1.0"
authors = ["abledbody <drewisakid@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true

[dependencies]
asm_19 = { git = "https://github.com/abledbody/ASM-19-for-rust" }

[dependencies.sdl2]
version = "0.34.4"
default-features = false
features = ["unsafe_textures"]